[package]
name = "remiz"
version = "0.0.18"
edition = "2021"

[dependencies]
bat = "0.19.0"
blake3 = "1.3"
clap = { version = "3.0.10", features = ["derive"]}
convert_case = "0.5"
env_logger = "0.9"
log = "0.4"
mla = "1.2.0"
semver = { version = "1.0", features = ["serde"]}
serde = "1.0"
similar = "2.1.0"
toml = "0.5"
uuid = { version = "0.8", features = ["v4"] }
walkdir = "2.3.2"
whoami = "1.2.1"